syntax = "proto3";

option csharp_namespace = "Promotion.API";

package promotion;

// The coupon service definition.
service CouponProtoService {
  // Coupon CRUD Operations
  rpc GetCoupon (GetCouponRequest) returns (CouponModel);
}

message GetCouponRequest {
  string productId = 1;
}

message CouponModel {
  string id = 1;
  string code = 2;
  string productId = 3;
  string description = 4;
  int32 amount = 5;
  string couponType = 6;
}